server/webapp/WEB-INF/rails/app/assets/stylesheets/views/agents.scss
/*************************GO-LICENSE-START*********************************
 * Copyright 2014 ThoughtWorks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *************************GO-LICENSE-END***********************************/

.page_header {
  min-height: 0;
}

.page_header.isFixed {
    position: fixed;
    top:0;
    z-index: 1000;
    width: 98%;
}

.agent_details_pane {
    margin-top: 25px;
}
.agent_details_pane label {
    color: #828282;
    float: left;
    width: 140px;
}

.agent_details_pane div {
    margin-bottom: 10px;
}

.agent_header th.selector {
    padding: 0 2px 0 5px;
    text-align: center;
}

.agent_header th.hostname {
    padding-left: 34px;
}

.agent_instance .agent_hostname {
    line-height: 16px;
    height: 16px;
    display: block;
}

.agent_instance .info_icon {
    margin-bottom: -3px;
}

.agent_selector {
    text-align: right;
}

span.contextual_help.agent_tooltip {
    margin: 0;
    padding: 0;
}

